feat (frontend):register student
Add create student from admin page

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": ["js/main.js" , "js/staff.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
