--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"cd backend && npm run dev\" \"cd ..\" \"cd frontend && ng serve\"",
+    "install": "concurrently \"cd backend && npm install\" \"cd ..\" \"cd frontend && npm install\"",
+    "sync": "node ./backend/src/sync.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
